@@ -59,7 +59,7 @@ public class Bardness extends CombatAbilities
 		//%%%%%att,armor,damage,hp,mana,move
 		if((preCastSet==Integer.MAX_VALUE)||(preCastSet<=0))
 		{
-			setCombatStats(mob,0,0,0,-10,-10,-10, true);
+			setCombatStats(mob,0,-25,0,-10,-10,-10, true);
 			setCharStats(mob);
 		}
 	}
